After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773383 - application: clear dbus_manager and search_provider after unregistering
application: clear dbus_manager and search_provider after unregistering
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-23 14:59 UTC by Ernestas Kulik
Modified: 2016-10-24 14:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: clear dbus_manager and search_provider after unregistering (1.66 KB, patch)
2016-10-23 14:59 UTC, Ernestas Kulik
committed Details | Review

Description Ernestas Kulik 2016-10-23 14:59:07 UTC
The search provider gets unregistered twice when trying to run Nautilus
with a primary instance active, resulting in the infamous warning:

GLib-GIO-CRITICAL **: g_dbus_interface_skeleton_unexport: assertion
'interface_->priv->connections != NULL' failed

The fix is clearing both dbus_manager and search_provider in
nautilus_application_dbus_unregister() as opposed to during
finalization.
Comment 1 Ernestas Kulik 2016-10-23 14:59:12 UTC
Created attachment 338286 [details] [review]
application: clear dbus_manager and search_provider after unregistering
Comment 2 Carlos Soriano 2016-10-24 14:06:33 UTC
Review of attachment 338286 [details] [review]:

oh so this was it! cool
Comment 3 Ernestas Kulik 2016-10-24 14:21:39 UTC
Attachment 338286 [details] pushed as ea92d86 - application: clear dbus_manager and search_provider after unregistering