application: clear dbus_manager and search_provider after unregistering

The search provider gets unregistered twice when trying to run Nautilus
with a primary instance active, resulting in the infamous warning:

GLib-GIO-CRITICAL **: g_dbus_interface_skeleton_unexport: assertion
'interface_->priv->connections != NULL' failed

The fix is clearing both dbus_manager and search_provider in
nautilus_application_dbus_unregister() as opposed to during
finalization.

https://bugzilla.gnome.org/show_bug.cgi?id=773383